--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "3.1.0"
