--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.19.2",
     "pug": "^3.0.3"
   },
