--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "pug": "^3.0.3"
   },
