--- a/src/databases/tareas.json
+++ b/src/databases/tareas.json
@@ -77,6 +77,7 @@
   },
   {
     "id": 1757906491314,
+    "area": "mantenimiento",
     "titulo": "Revisar expediente médico",
     "descripcion": "Revisar expediente del paciente Juan Pérez",
     "estado": "pendiente",
