--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.20.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "3.1.0"
